--- a/src/BlueBear/LayoutBundle/Resources/views/layout.html.twig
+++ b/src/BlueBear/LayoutBundle/Resources/views/layout.html.twig
@@ -15,10 +15,11 @@
     <ul class="nav navbar-nav">
         {% if is_granted('ROLE_DATA_MANAGER') %}
             {# PUT YOUR ADMINS MENU HERE #}
-            {{ utilities.admin_menu_icon_link('sitemap', 'My Admin', 'myadmin', 'index') }}
-            {% if is_granted('ROLE_MEDIA_MANAGER') %}
-                {{ utilities.admin_menu_icon_link('image', 'Médias', 'media', 'index') }}
-            {% endif %}
+            {{ utilities.admin_menu_icon_link('globe', 'Worlds', 'world', 'list') }}
+            {{ utilities.admin_menu_icon_link('sitemap', 'Configuration', 'configuration', 'index') }}
+            {#{% if is_granted('ROLE_MEDIA_MANAGER') %}#}
+                {#{{ utilities.admin_menu_icon_link('image', 'Médias', 'media', 'index') }}#}
+            {#{% endif %}#}
         {% endif %}
         {% if is_granted('ROLE_USER_MANAGER') %}
             {{ utilities.admin_menu_icon_link('users', 'Utilisateurs', 'user', 'list') }}
