--- a/src/BlueBear/LayoutBundle/Resources/views/layout.html.twig
+++ b/src/BlueBear/LayoutBundle/Resources/views/layout.html.twig
@@ -40,6 +40,7 @@
     'bundles/samsonautocomplete/css/autocomplete.css'
     'bundles/mopabootstrap/components/smalot-bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css'
     'bundles/cleverageeavmanagerlayout/css/layout.css'
+    'bundles/bluebearworldbrowser/css/map.css'
     filter='?uglifycss' filter='cssrewrite' %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen"/>
     {% endstylesheets %}
