--- a/src/BlueBear/WorldBrowserBundle/Resources/views/World/world.preview.html.twig
+++ b/src/BlueBear/WorldBrowserBundle/Resources/views/World/world.preview.html.twig
@@ -2,7 +2,7 @@
 {% set icePercentage = 100/result.getClimate.getTemperatureAverage %}
 {% set water_percentage = result.getClimate.getWaterPercentage %}
 {% set seed = result.getWorldCode %}
-<a href="{{ entity_path(result, 'edit') }}" data-target="tg_right"
+<a href="{{ admin_path('map', 'show', {id: result.id}) }}"
    title="{{ ('admin.' ~ admin.code ~ '.edit.title') | trans }}">
     <img src="http://worldgen.bin.sh/worldgen.cgi?palette=Atlas&iter=20&cmd=Create&pct_ice={{ icePercentage }}&height=100&seed={{ seed }}&projection=Animated&pct_water={{ water_percentage }}&motif=SciFi">
 </a>
