--- a/src/BlueBear/WorldBrowserBundle/Resources/views/Map/cell.html.twig
+++ b/src/BlueBear/WorldBrowserBundle/Resources/views/Map/cell.html.twig
@@ -1,6 +1,17 @@
-{% if hidden | default(false) %}
-    <div class="hexagon hidden"></div>
-{% else %}
-    <a href="{{ admin_path('map', 'areaMap', {x: cell.x, y: cell.y, id: map.world.id}) }}"
-       class="hexagon" style="background-color:{{ cell.color }}"></a>
-{% endif %}
+{% spaceless %}
+    {% if not cell or hidden | default(false) %}
+        <div class="hexagon hexagon-hidden"></div>
+    {% else %}
+        {{ cell.color }}
+        <a href="{{ admin_path('map', 'areaMap', {x: cell.x, y: cell.y, id: map.world.id}) }}"
+           class="hexagon {{ class is defined ? class }}" style="background-color:{{ cell.color }}">
+            {% if c.contents|length %}
+                <div class="hexacontent">
+                    {% for content in c.contents %}
+                        <i class="fa fa-bank"></i>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </a>
+    {% endif %}
+{% endspaceless %}
