--- a/src/BlueBear/WorldBrowserBundle/Resources/views/Map/worldMap.html.twig
+++ b/src/BlueBear/WorldBrowserBundle/Resources/views/Map/worldMap.html.twig
@@ -3,6 +3,7 @@
 {% block main_container %}
     <style>
         {% set size = size | default(16) %}
+        {% set height = size * 1.732 %}
         .hexagon {
             /* left/right margin approx. 25% of .hexagon width + spacing */
             margin: 0 {{ (size * 0.24)|round }}px;
@@ -13,10 +14,19 @@
              * actual formula is 2*(width/(2*Math.tan(Math.PI/6)))
              */
             width: {{ size }}px;
-            height: {{ (size * 1.732)|round }}px;
+            height: {{ height|round }}px;
         }
         .hexagon:nth-child(even) {
-            top: {{ (size * 1.732 / 2)|round }}px;
+            top: {{ (height / 2)|round }}px;
+        }
+        .honeycomb-even .hexagon:nth-child(even) {
+            top: -{{ (height / 2)|round }}px;
+        }
+        .honeycomb-even {
+            padding-top: {{ (height / 2)|round }}px;
+        }
+        .ibws-fix-odd {
+            margin-top: -{{ (height / 2)|round }}px;
         }
     </style>
     {{ parent() }}
@@ -24,10 +34,12 @@
 
 {% block tg_center %}
     <div class="honeycomb">
-        {% for line in map.cells %}
+        {% for row in 0..70 %}
             <div class="ibws-fix">
-                {% for cell in line %}
-                    {% include '@BlueBearWorldBrowser/Map/cell.html.twig' %}
+                {% for col in 0..70 %}
+                    {% set offset = col is even ? 0 : 1 %}
+                    {% set c = map.cell(col, row - (col - offset) / 2) %}
+                    {% include '@BlueBearWorldBrowser/Map/cell.html.twig' with {cell: c} %}
                 {% endfor %}
             </div>
         {% endfor %}
