--- a/src/BlueBear/WorldBrowserBundle/Resources/views/World/world.preview.html.twig
+++ b/src/BlueBear/WorldBrowserBundle/Resources/views/World/world.preview.html.twig
@@ -1,7 +1,7 @@
 {# @var result \Sidus\EAV\World #}
-{% set icePercentage = 100/result.getClimate.getTemperatureAverage %}
-{% set water_percentage = result.getClimate.getWaterPercentage %}
-{% set seed = result.getWorldCode %}
+{% set icePercentage = 100/result.climate.temperatureAverage %}
+{% set water_percentage = result.climate.waterPercentage %}
+{% set seed = result.worldCode %}
 <a href="{{ admin_path('map', 'worldMap', {id: result.id}) }}"
    title="{{ ('admin.' ~ admin.code ~ '.edit.title') | trans }}">
     <img src="http://worldgen.bin.sh/worldgen.cgi?palette=Atlas&iter=20&cmd=Create&pct_ice={{ icePercentage }}&height=100&seed={{ seed }}&projection=Animated&pct_water={{ water_percentage }}&motif=SciFi">
