Commiting old work, no idea what is in there

--- a/src/BlueBear/WorldBrowserBundle/Resources/views/Map/cell.html.twig
+++ b/src/BlueBear/WorldBrowserBundle/Resources/views/Map/cell.html.twig
@@ -3,7 +3,7 @@
         <div class="hexagon hexagon-hidden"></div>
     {% else %}
         <a href="{{ admin_path('map', 'areaMap', {x: cell.x, y: cell.y, id: map.world.id}) }}"
-           class="hexagon {{ class is defined ? class }}" style="background-color:{{ cell.color }}">
+           class="hexagon {{ class is defined ? class }}" style="background-color:{{ get_color(cell) }}">
             {% if c.contents|length %}
                 <div class="hexacontent">
                     {% for content in c.contents %}
